--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
 			height: 100%;
 			width: auto;
 		}
-
 	</style>
 </head>
 
@@ -240,19 +239,19 @@
 				<div id="galery-owl" class="owl-carousel owl-theme">
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/img/osdc_hack_2.jpeg" alt="" height="500px">
+						<img src="/img/osdc_hack_2.jpeg" alt="" >
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/img/osdc_hack_3.jpeg" alt="" height="500px">
+						<img src="/img/osdc_hack_3.jpeg" alt="" >
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/img/osdc_hack_1.jpeg" alt="" height="500px">
+						<img src="/img/osdc_hack_1.jpeg" alt="" >
 
 					</div>
 					<!-- /galery item -->
@@ -313,7 +312,7 @@
 				</div>
 				<!--Centering the remaining two divs-->
 				<div class="col-sm-2">
-                <!--for begining-->
+					<!--for begining-->
 				</div>
 				<!-- contact -->
 				<div class="col-sm-4">
@@ -340,7 +339,7 @@
 					</div>
 				</div>
 				<div class="col-sm-2">
-                 <!--For end-->
+					<!--For end-->
 				</div>
 			</div>
 			<!-- /row -->
@@ -460,7 +459,7 @@
 								</div>
 								<!-- /event -->
 
-								
+
 
 								<!-- event -->
 								<div class="event">
@@ -470,9 +469,76 @@
 										<h3 class="my-5 event-title">Mid Reviews</h3>
 									</div>
 								</div>
-								<!-- /event -->
 
-								<!-- event
+								<div class="events-wrapper">
+									<!-- event -->
+									<div class="event">
+										<div class="event-day">
+											<div>
+												<span class="day">23</span>
+												<span class="year">Jan, 2022</span>
+											</div>
+										</div>
+
+										<div class="event-content">
+											<p class="event-time"><i class="fa fa-clock-o"></i> 10:00 AM - 03:00 PM</p>
+											<h3 class="event-title">Final Reviews</h3>
+										</div>
+
+
+									</div>
+									<!-- /event -->
+
+
+									<!-- event -->
+									<div class="event">
+										<div class="event-hour"></div>
+										<div class="event-content"><br><br>
+											<p class="event-time"><i class="fa fa-clock-o"></i> 04:00 PM</p>
+											<h3 class="my-5 event-title">Top 10 teams announcement</h3>
+										</div>
+									</div>
+
+
+									<!-- /event -->
+
+									<!-- event -->
+									<div class="event">
+										<div class="event-hour"></div>
+										<div class="event-content"><br><br>
+											<p class="event-time"><i class="fa fa-clock-o"></i> 04:00 PM - 06:00 PM</p>
+											<h3 class="my-5 event-title">Presentations Preparation</h3>
+										</div>
+									</div>
+
+
+									<!-- /event -->
+
+									<!-- event -->
+									<div class="event">
+										<div class="event-hour"></div>
+										<div class="event-content"><br><br>
+											<p class="event-time"><i class="fa fa-clock-o"></i> 06:00 PM - 09:00 PM</p>
+											<h3 class="my-5 event-title">Demos</h3>
+										</div>
+									</div>
+
+
+									<!-- /event -->
+
+									<!-- event -->
+									<div class="event">
+										<div class="event-hour"></div>
+										<div class="event-content"><br><br>
+											<p class="event-time"><i class="fa fa-clock-o"></i> 10:00 PM</p>
+											<h3 class="my-5 event-title">Results & Closing Ceremony</h3>
+										</div>
+									</div>
+
+
+									<!-- /event -->
+
+									<!-- event
 						<div class="event">
 							<div class="event-hour"></div>
 							<div class="event-content"><br><br>
@@ -511,151 +577,155 @@
 								<h3 class="event-title">Result Declaration.</h3>
 							</div>
 						</div> -->
+
+
+								</div>
+								<!-- /row -->
 							</div>
+							<!-- /container -->
 						</div>
-					</div>
-					<!-- /row -->
-				</div>
-				<!-- /container -->
-			</div>
-			<!-- /Event Schedule -->
+						<!-- /Event Schedule -->
 
-			<!-- CTA -->
-			<div id="rules" class="section">
-				<!-- background image -->
-				<div class="section-bg" style="background-image:url(./img/background03.jpg)"
-					data-stellar-background-ratio="0.5"></div>
-				<!-- /background image -->
+						<!-- CTA -->
+						<div id="rules" class="section">
+							<!-- background image -->
+							<div class="section-bg" style="background-image:url(./img/background03.jpg)"
+								data-stellar-background-ratio="0.5"></div>
+							<!-- /background image -->
 
-				<!-- container -->
-				<div class="container">
-					<!-- container -->
-					<div class="row">
-						<!-- cta content -->
-						<div class="col-md-8 col-md-offset-2">
-							<div class="cta-content text-center">
-								<h2>Rules & FAQs</h2>
-								<p class="lead"></p>
-								<a href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download Rules</a>
+							<!-- container -->
+							<div class="container">
+								<!-- container -->
+								<div class="row">
+									<!-- cta content -->
+									<div class="col-md-8 col-md-offset-2">
+										<div class="cta-content text-center">
+											<h2>Rules & FAQs</h2>
+											<p class="lead"></p>
+											<a href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download
+												Rules</a>
+										</div>
+									</div>
+									<!-- /cta content -->
+								</div>
+								<!-- /row -->
 							</div>
+							<!-- /container -->
 						</div>
-						<!-- /cta content -->
-					</div>
-					<!-- /row -->
-				</div>
-				<!-- /container -->
-			</div>
-			<!-- /CTA -->
+						<!-- /CTA -->
 
 
 
-			<!-- Contact -->
-			<div id="contact" class="section">
-				<!-- container -->
-				<div class="container">
-					<!-- row -->
-					<div class="row">
-						<!-- section title -->
-						<div class="section-title">
-							<h3 class="title"><span>Contact</span> <span style="color: #dd0a37;">Info</span></h3>
-						</div>
-						<!-- /section title -->
+						<!-- Contact -->
+						<div id="contact" class="section">
+							<!-- container -->
+							<div class="container">
+								<!-- row -->
+								<div class="row">
+									<!-- section title -->
+									<div class="section-title">
+										<h3 class="title"><span>Contact</span> <span style="color: #dd0a37;">Info</span>
+										</h3>
+									</div>
+									<!-- /section title -->
 
-						<!-- contact -->
-						<div class="col-sm-4">
-							<div class="contact">
-								<h3>Venue</h3>
-						<p>This hackathon is being hosted online 🌐!</p>
+									<!-- contact -->
+									<div class="col-sm-4">
+										<div class="contact">
+											<h3>Venue</h3>
+											<p>This hackathon is being hosted online 🌐!</p>
+										</div>
+									</div>
+									<!-- /contact -->
+
+									<!-- contact -->
+									<div class="col-sm-4">
+										<div class="contact">
+											<h3>Email</h3>
+											<a href="#">osdcjiit@gmail.com</a>
+										</div>
+									</div>
+									<!-- /contact -->
+
+									<div class="col-sm-4">
+										<div class="contact">
+											<h3>Telegram Channel</h3>
+											<a href="https://telegram.me/osdhack"
+												target="_blank">telegram.me/osdhack</a>
+										</div>
+									</div>
+
+								</div>
+								<!-- /row -->
 							</div>
-						</div>
-						<!-- /contact -->
+							<!-- /container -->
 
-						<!-- contact -->
-						<div class="col-sm-4">
-							<div class="contact">
-								<h3>Email</h3>
-								<a href="#">osdcjiit@gmail.com</a>
+						</div>
+						<!-- /Contact -->
+						<hr>
+						<!-- Footer -->
+						<footer id="footer">
+							<!-- container -->
+							<div class="container">
+								<!-- row -->
+								<div class="row">
+
+									<!-- footer logo -->
+									<div class="col-md-4 col-md-push-4">
+										<div class="footer-brand">
+											<a class="logo" href="index.html">
+												<img class="logo-img" src="./img/osdc-sticker.png" alt="logo">
+											</a>
+											<br>
+											<a href="https://www.contributor-covenant.org/" target="_blank">
+												<p class="lead"></p>Code of Conduct</p>
+											</a>
+										</div>
+									</div>
+									<!-- /footer logo -->
+
+									<!-- contact social -->
+									<div class="col-md-4 col-md-push-4">
+										<div class="contact-social">
+											<a href="https://www.facebook.com/groups/jiitlug/" target="_blank"><i
+													class="fab fa-facebook"></i></a>
+											<a href="https://twitter.com/osdcjiit" target="_blank"><i
+													class="fab fa-twitter"></i></a>
+											<a href="https://discord.io/osdhack22" target="_blank"><i
+													class="fab fa-discord"></i></a>
+										</div>
+									</div>
+									<!-- /contact social -->
+
+									<!-- copyright -->
+									<div class="col-md-4 col-md-pull-8">
+
+										<span class="copyright">
+											<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+											Copyright &copy;
+											<script>document.write(new Date().getFullYear());</script> All rights
+											reserved by <a href="osdc.netlify.com">OSDC</a>
+											<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+										</span>
+									</div>
+									<!-- /copyright -->
+
+								</div>
+								<!-- /row -->
 							</div>
-						</div>
-						<!-- /contact -->
+							<!-- /container -->
+						</footer>
+						<!-- /Footer -->
 
-						<div class="col-sm-4">
-							<div class="contact">
-								<h3>Telegram Channel</h3>
-								<a href="https://telegram.me/osdhack" target="_blank">telegram.me/osdhack</a>
-							</div>
-						</div>
-
-					</div>
-					<!-- /row -->
-				</div>
-				<!-- /container -->
-
-			</div>
-			<!-- /Contact -->
-			<hr>
-			<!-- Footer -->
-			<footer id="footer">
-				<!-- container -->
-				<div class="container">
-					<!-- row -->
-					<div class="row">
-
-						<!-- footer logo -->
-						<div class="col-md-4 col-md-push-4">
-							<div class="footer-brand">
-								<a class="logo" href="index.html">
-									<img class="logo-img" src="./img/osdc-sticker.png" alt="logo">
-								</a>
-								<br>
-								<a href="https://www.contributor-covenant.org/" target="_blank">
-									<p class="lead"></p>Code of Conduct</p>
-								</a>
-							</div>
-						</div>
-						<!-- /footer logo -->
-
-						<!-- contact social -->
-						<div class="col-md-4 col-md-push-4">
-							<div class="contact-social">
-								<a href="https://www.facebook.com/groups/jiitlug/" target="_blank"><i
-										class="fab fa-facebook"></i></a>
-								<a href="https://twitter.com/osdcjiit" target="_blank"><i class="fab fa-twitter"></i></a>
-								<a href="https://discord.io/osdhack22" target="_blank"><i
-										class="fab fa-discord"></i></a>
-							</div>
-						</div>
-						<!-- /contact social -->
-
-						<!-- copyright -->
-						<div class="col-md-4 col-md-pull-8">
-
-							<span class="copyright">
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								Copyright &copy;
-								<script>document.write(new Date().getFullYear());</script> All rights reserved by <a
-									href="osdc.netlify.com">OSDC</a>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							</span>
-						</div>
-						<!-- /copyright -->
-
-					</div>
-					<!-- /row -->
-				</div>
-				<!-- /container -->
-			</footer>
-			<!-- /Footer -->
-
-			<!-- jQuery Plugins -->
-			<script src="js/jquery.min.js"></script>
-			<script src="js/bootstrap.min.js"></script>
-			<script src="js/jquery.waypoints.min.js"></script>
-			<script src="js/owl.carousel.min.js"></script>
-			<script src="js/jquery.stellar.min.js"></script>
-			<script src="js/jquery.countTo.js"></script>
-			<script src="js/main.js"></script>
-			<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+						<!-- jQuery Plugins -->
+						<script src="js/jquery.min.js"></script>
+						<script src="js/bootstrap.min.js"></script>
+						<script src="js/jquery.waypoints.min.js"></script>
+						<script src="js/owl.carousel.min.js"></script>
+						<script src="js/jquery.stellar.min.js"></script>
+						<script src="js/jquery.countTo.js"></script>
+						<script src="js/main.js"></script>
+						<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 </body>
 
