change telegram link

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 									<div class="col-sm-4">
 										<div class="contact">
 											<h3>Telegram Channel</h3>
-											<a href="https://telegram.me/osdhack"
+											<a href=""
 												target="_blank">telegram.me/osdhack</a>
 										</div>
 									</div>
