styled guest speaker list

--- a/index.html
+++ b/index.html
@@ -279,35 +279,35 @@
 				<!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<div class="speaker-img" style="height: 200px; overflow: hidden;"><img
-								style="border:solid 4px #dd0a37;border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-image: linear-gradient(45deg, rgb(0,143,104), rgb(250,224,66)) 1;border-radius: 50%;" src="img/speaker1.jpeg" alt="">
 						</div>
 						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
 							<h3>Ujjwal Sharma</h3>
 						</a>
-						<h4>Compilers Hacker at Igalia</h4>
+						<h4 style="margin-top: -10px;">Compilers Hacker at Igalia</h4>
 					</div>
 				</div> <!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<div class="speaker-img" style="height: 200px; overflow: hidden;"><img
-								style="border:solid 4px #dd0a37;border-radius: 50%;" src="img/speaker2.jpeg" alt="">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker2.jpeg" alt="">
 						</div>
 						<a href="https://www.linkedin.com/in/vaidik/?originalSubdomain=in" target="_blank">
 							<h3>Vaidik Kapoor</h3>
 						</a>
-						<h4>VP Engineering, Grofers</h4>
+						<h4 style="margin-top: -10px;">VP Engineering, Grofers</h4>
 					</div>
 				</div> <!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<div class="speaker-img" style="height: 200px; overflow: hidden;"><img
-								style="border:solid 4px #dd0a37;border-radius: 50%;" src="img/speaker3.jpeg" alt="">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker3.jpeg" alt="">
 						</div>
 						<a href="https://www.linkedin.com/in/atrisharma/?originalSubdomain=in" target="_blank">
 							<h3>Atri Sharma</h3>
 						</a>
-						<h4>Distinguished Engineer at Securonix</h4>
+						<h4 style="margin-top: -10px;">Distinguished Engineer at Securonix</h4>
 					</div>
 				</div>
 				<!--Centering the remaining two divs-->
@@ -317,25 +317,25 @@
 				<!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<div class="speaker-img" style="height: 200px; overflow: hidden;"><img
-								style="border:solid 4px #dd0a37;border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
 						</div>
 						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
 							<h3>Ujjwal Sharma</h3>
 						</a>
-						<h4>Nodejs Collaborator,Pero</h4>
+						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
 					</div>
 				</div>
 				<!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<div class="speaker-img" style="height: 200px; overflow: hidden;"><img
-								style="border:solid 4px #dd0a37;border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
+								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
 						</div>
 						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
 							<h3>Ujjwal Sharma</h3>
 						</a>
-						<h4>Nodejs Collaborator,Pero</h4>
+						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
 					</div>
 				</div>
 				<div class="col-sm-2">
