change background and heading color

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 									<div class="col-md-8 col-md-offset-2">
 										<div class="cta-content text-center">
 											<div class="section-title">
-											<h2 class="title"><span style="color: black;">Rules & </span><span style="color: #dd0a37;">&nbsp;FAQs</span></h2>
+											<h2 class="title"><span>Rules & </span><span style="color: #dd0a37;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
 											<a href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download
