some more gallery changes

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 				<!-- Logo -->
 				<div class="navbar-brand">
 					<a class="logo" href="index.html">
-						<img class="logo-img" src="/OSDHack/img/osdhack-sticker.png" alt="logo">
-						<img class="logo-alt-img" src="/OSDHack/img/osdhack-sticker.png" alt="logo">
+						<img class="logo-img" src="/img/osdhack-sticker.png" alt="logo">
+						<img class="logo-alt-img" src="/img/osdhack-sticker.png" alt="logo">
 					</a>
 				</div>
 				<!-- /Logo -->
@@ -239,19 +239,19 @@
 				<div id="galery-owl" class="owl-carousel owl-theme">
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/OSDHack/img/osdc_hack_2.jpeg" alt="">
+						<img src="/img/osdc_hack_2.jpeg" alt="">
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/OSDHack/img/osdc_hack_3.jpeg" alt="">
+						<img src="/img/osdc_hack_3.jpeg" alt="">
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/OSDHack/img/osdc_hack_1.jpeg" alt="">
+						<img src="/img/osdc_hack_1.jpeg" alt="">
 
 					</div>
 					<!-- /galery item -->
@@ -692,7 +692,7 @@
 									<div class="col-md-4 col-md-push-4">
 										<div class="footer-brand">
 											<a class="logo" href="index.html">
-												<img class="logo-img" src="/OSDHack/img/osdhack-sticker.png" alt="logo">
+												<img class="logo-img" src="/img/osdhack-sticker.png" alt="logo">
 											</a>
 											<br>
 											<a href="https://www.contributor-covenant.org/" target="_blank">
