--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<link rel="icon" type="image/png" href="./img/favicon.png">
+	<link rel="icon" type="image/png" href="img/favicon.png">
 	<title>OSDHack'21</title>
 
 	<!-- Google font -->
@@ -88,8 +88,8 @@
 				<!-- Logo -->
 				<div class="navbar-brand">
 					<a class="logo" href="index.html">
-						<img class="logo-img" src="/img/osdhack-sticker.png" alt="logo">
-						<img class="logo-alt-img" src="/img/osdhack-sticker.png" alt="logo">
+						<img class="logo-img" src="img/osdhack-sticker.png" alt="logo">
+						<img class="logo-alt-img" src="img/osdhack-sticker.png" alt="logo">
 					</a>
 				</div>
 				<!-- /Logo -->
@@ -118,10 +118,14 @@
 	</header>
 	<!-- /Header -->
 
+	<div class="stars"></div>
+	<div class="clouds"></div>
+	<div class="twinkling" style="z-index: 0;"></div>
+
 	<!-- Home -->
 	<div id="home">
 		<!-- background image -->
-		<div class="section-bg" style="background-image:url(./img/background01.jpg)"
+		<div class="section-bg" style="background-image:url(img/background01.jpg)"
 			data-stellar-background-ratio="0.5"></div>
 		<!-- /background image -->
 
@@ -239,19 +243,19 @@
 				<div id="galery-owl" class="owl-carousel owl-theme">
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/img/osdc_hack_2.jpeg" alt="">
+						<img src="img/osdc_hack_2.jpeg" alt="">
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/img/osdc_hack_3.jpeg" alt="">
+						<img src="img/osdc_hack_3.jpeg" alt="">
 					</div>
 					<!-- /galery item -->
 
 					<!-- galery item -->
 					<div class="galery-item">
-						<img src="/img/osdc_hack_1.jpeg" alt="">
+						<img src="img/osdc_hack_1.jpeg" alt="">
 
 					</div>
 					<!-- /galery item -->
@@ -606,7 +610,7 @@
 						<!-- CTA -->
 						<div id="rules" class="section">
 							<!-- background image -->
-						<!--	<div class="section-bg" style="background-image:url(./img/background03.jpg);  "
+						<!--	<div class="section-bg" style="background-image:url(img/background03.jpg);  "
 								data-stellar-background-ratio="0.5"></div>-->
 							<!-- /background image -->
 
@@ -692,7 +696,7 @@
 									<div class="col-md-4 col-md-push-4">
 										<div class="footer-brand">
 											<a class="logo" href="index.html">
-												<img class="logo-img" src="/img/osdhack-sticker.png" alt="logo">
+												<img class="logo-img" src="img/osdhack-sticker.png" alt="logo">
 											</a>
 											<br>
 											<a href="https://www.contributor-covenant.org/" target="_blank">
