fixed rules and contact alignment

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 								<!-- container -->
 								<div class="row">
 									<!-- cta content -->
-									<div class="col-md-8 col-md-offset-2">
+									<div class="col-md-8">
 										<div class="cta-content text-center">
 											<div class="section-title">
 											<h2 class="title"><span>Rules & </span><span style="color: #dd0a37;">&nbsp;FAQs</span></h2>
@@ -645,6 +645,7 @@
 							<div class="container">
 								<!-- row -->
 								<div class="row">
+									<div class="col-md-8">
 									<!-- section title -->
 									<div class="section-title">
 										<h3 class="title"><span>Contact</span> <span style="color: #dd0a37;">Info</span>
@@ -676,7 +677,7 @@
 											<a href="" target="_blank">telegram.me/osdhack</a>
 										</div>
 									</div>
-
+								</div>
 								</div>
 								<!-- /row -->
 							</div>
@@ -742,7 +743,7 @@
 									<!-- /contact social -->
 
 									<!-- copyright -->
-									<div class="col-md-4 col-md-pull-8">
+									<div class="col-md-12">
 
 										<span class="copyright">
 											<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
