--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
 
 	<div class="stars"></div>
 	<div class="clouds"></div>
-	<div class="twinkling" style="z-index: 0;"></div>
+	<div class="twinkling" style="z-index: 2;"></div>
 
 	<!-- Home -->
 	<div id="home">
 		<!-- background image -->
-		<div class="section-bg" style="background-image:url(img/background01.jpg)"
-			data-stellar-background-ratio="0.5"></div>
+		<!-- <div class="section-bg" style="background-image:url(img/background01.jpg)"
+			data-stellar-background-ratio="0.5"></div> -->
 		<!-- /background image -->
 
 		<!-- home wrapper -->
-		<div class="home-wrapper">
+		<div class="home-wrapper" style="z-index: 5;">
 			<!-- container -->
 			<div class="container">
 				<!-- row -->
