--- a/index.html
+++ b/index.html
@@ -692,34 +692,23 @@
 							<div class="container">
 								<!-- row -->
 								<div class="row">
-<!-- copyright -->
-<div class="col-md-12">
 
-	<span class="copyright">
-		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		Copyright &copy;
-		<script>document.write(new Date().getFullYear());</script> All rights
-		reserved by <a href="osdc.netlify.com">OSDC</a>
-		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	</span>
-</div>
-<!-- /copyright -->
 									<!-- footer logo -->
-									<div class="col-md-4 col-md-push-4">
+									<div class="col-md-4">
 										<div class="footer-brand">
 											<a class="logo" href="index.html">
-												<img class="logo-img" src="img/osdhack-sticker.png" alt="logo">
+												<!-- <img class="logo-img" src="img/osdhack-sticker.png" alt="logo"> -->
 											</a>
-											<br>
+											<!-- <br> -->
 											<a href="https://www.contributor-covenant.org/" target="_blank">
-												<p class="lead"></p>Code of Conduct</p>
+												<p class=""></p>Code of Conduct</p>
 											</a>
 										</div>
 									</div>
 									<!-- /footer logo -->
 
 									<!-- contact social -->
-									<div class="col-md-4 col-md-push-4">
+									<div class="col-md-4">
 										<div class="contact-social">
 
 											<a href="https://www.facebook.com/groups/jiitlug/" target="_blank">
@@ -756,9 +745,20 @@
 								<!-- /row -->
 							</div>
 							<!-- /container -->
+							<!-- copyright -->
+							
+							<!-- /copyright -->
 						</footer>
-						<!-- /Footer -->
+						<div class="text-center">
 
+							<!-- <span class="copyright"> -->
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="osdc.netlify.com">OSDC</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							<!-- </span> -->
+						</div>
+						<!-- /Footer -->
 						<!-- jQuery Plugins -->
 						<script src="js/jquery.min.js"></script>
 						<script src="js/bootstrap.min.js"></script>
