--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 								where participants will brainstorm and
 								build on their idea.</h4> -->
 							<h5 class="lead">20th-23rd January, 2022</h5>
+							<a href="https://discord.io/osdhack22" target="_blank" class="main-btn">Join our Discord</a>
 							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
 								target="_blank" class="main-btn">Registration</a>
 						</div>
@@ -248,9 +249,9 @@
 					<!-- /galery item -->
 
 					<!-- galery item -->
-					<div class="galery-item">
+					<!-- <div class="galery-item">
 						<img src="img/osdc_hack_3.jpeg" alt="">
-					</div>
+					</div> -->
 					<!-- /galery item -->
 
 					<!-- galery item -->
@@ -269,7 +270,7 @@
 	</div>
 	<!-- /Galery -->
 	<!-- Speakers -->
-	<div  class="section">
+	<div class="section">
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
@@ -321,7 +322,7 @@
 					<!--for begining-->
 				</div>
 				<!-- contact -->
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-4">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
@@ -331,9 +332,9 @@
 						</a>
 						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
 					</div>
-				</div>
+				</div> -->
 				<!-- contact -->
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-4">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
 								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
@@ -344,9 +345,9 @@
 						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
 					</div>
 
-				</div>
+				</div> -->
 				<div class="col-sm-2">
-					<!--For end-->
+
 				</div>
 			</div>
 			<!-- /row -->
@@ -585,7 +586,7 @@
 						<!-- CTA -->
 						<div id="rules" class="section">
 							<!-- background image -->
-						<!--	<div class="section-bg" style="background-image:url(img/background03.jpg);  "
+							<!--	<div class="section-bg" style="background-image:url(img/background03.jpg);  "
 								data-stellar-background-ratio="0.5"></div>-->
 							<!-- /background image -->
 
@@ -597,7 +598,8 @@
 									<div class="col-md-8">
 										<div class="cta-content text-center">
 											<div class="section-title">
-											<h2 class="title"><span>Rules & </span><span style="color: #dd0a37;">&nbsp;FAQs</span></h2>
+												<h2 class="title"><span>Rules & </span><span
+														style="color: #dd0a37;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
 											<a href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download
@@ -621,38 +623,85 @@
 								<!-- row -->
 								<div class="row">
 									<div class="col-md-8">
-									<!-- section title -->
-									<div class="section-title">
-										<h3 class="title"><span>Contact</span> <span style="color: #dd0a37;">Info</span>
-										</h3>
-									</div>
-									<!-- /section title -->
+										<!-- section title -->
+										<div class="section-title">
+											<h3 class="title"><span>Contact</span> <span
+													style="color: #dd0a37;">Info</span>
+											</h3>
+										</div>
+										<!-- /section title -->
 
-									<!-- contact -->
-									<div class="col-sm-4">
-										<div class="contact">
-											<h3>Venue</h3>
-											<p>This hackathon is being hosted online 🌐!</p>
+										<!-- contact -->
+										<div class="col-sm-4">
+											<div class="contact">
+												<h3>Venue</h3>
+												<p>This hackathon is being hosted online 🌐!</p>
+											</div>
+										</div>
+										<!-- /contact -->
+
+										<!-- contact -->
+										<div class="col-sm-4">
+											<div class="contact">
+												<h3>Email</h3>
+												<style>
+													.email {
+														color: white;
+														background-color: transparent;
+														text-decoration: none;
+													}
+
+													.email:visited {
+														color: white;
+														background-color: transparent;
+														text-decoration: none;
+													}
+
+													.email:hover {
+														color: red;
+														background-color: transparent;
+														text-decoration: underline;
+													}
+
+													.email:active {
+														color: white;
+														background-color: transparent;
+														text-decoration: underline;
+													}
+												</style>
+												<a class="email" href="mailto: osdcjiit@gmail.com"
+													target="_blank">osdcjiit@gmail.com</a>
+											</div>
+										</div>
+										<!-- /contact -->
+
+										<div class="col-sm-4">
+											<div class="contact">
+												<h3>Discord</h3>
+												<style>
+													.email {
+														color: white;
+														background-color: transparent;
+														text-decoration: none;
+													}
+
+													.email:visited {
+														color: white;
+														background-color: transparent;
+														text-decoration: none;
+													}
+
+													.email:hover {
+														color: red;
+														background-color: transparent;
+														text-decoration: underline;
+													}
+												</style>
+												<a class="email" href="https://discord.io/osdhack22"
+													target="_blank">discord.io/osdhack22</a>
+											</div>
 										</div>
 									</div>
-									<!-- /contact -->
-
-									<!-- contact -->
-									<div class="col-sm-4">
-										<div class="contact">
-											<h3>Email</h3>
-											<a href="#">osdcjiit@gmail.com</a>
-										</div>
-									</div>
-									<!-- /contact -->
-
-									<div class="col-sm-4">
-										<div class="contact">
-											<h3>Telegram Channel</h3>
-											<a href="" target="_blank">telegram.me/osdhack</a>
-										</div>
-									</div>
-								</div>
 								</div>
 								<!-- /row -->
 							</div>
@@ -721,10 +770,11 @@
 						<div class="text-center">
 
 							<!-- <span class="copyright"> -->
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								&copy;
-								<script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="osdc.netlify.com">OSDC</a>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							&copy;
+							<script>document.write(new Date().getFullYear());</script> All rights reserved by <a
+								href="osdc.netlify.com">OSDC</a>
+							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							<!-- </span> -->
 						</div>
 						<!-- /Footer -->
