--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 								where participants will brainstorm and
 								build on their idea.</h4> -->
 							<h5 class="lead">20th-23rd January, 2022</h5>
-							<a href="https://discord.io/osdhack22" target="_blank" class="main-btn">Join our Discord</a>
 							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
 								target="_blank" class="main-btn">Registration</a>
+							<a href="https://discord.io/osdhack22" target="_blank" class="main-btn" id="discord">Join our Discord</a>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -596,15 +596,17 @@
 								<div class="row">
 									<!-- cta content -->
 									<div class="col-md-8">
-										<div class="cta-content text-center">
+										<hr class="style-two">
+										<div class="cta-content text-center" id="rules_faqs">
 											<div class="section-title">
 												<h2 class="title"><span>Rules & </span><span
 														style="color: #dd0a37;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
-											<a href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download
+											<a style="margin-top: -30px;" href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download
 												Rules</a>
 										</div>
+										<hr class="style-two">
 									</div>
 									<!-- /cta content -->
 								</div>
