--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
 </head>
 
 <body>
-
+	<div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div>
+	<a href="#">
+		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
+			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
+		</div>
+	</a>
 	<!-- Header -->
 	<header id="header" class="transparent-navbar">
 		<!-- container -->
@@ -87,10 +92,10 @@
 			<div class="navbar-header">
 				<!-- Logo -->
 				<div class="navbar-brand">
-					<a class="logo" href="index.html">
+					<!-- <a class="logo" href="index.html">
 						<img class="logo-img" src="img/osdhack-sticker.png" alt="logo">
 						<img class="logo-alt-img" src="img/osdhack-sticker.png" alt="logo">
-					</a>
+					</a> -->
 				</div>
 				<!-- /Logo -->
 
@@ -107,6 +112,7 @@
 				<ul class="main-nav nav navbar-nav navbar-right">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
+					<li><a href="#guest_speakers">Speakers</a></li>
 					<li><a href="#schedule">Schedule</a></li>
 					<li><a href="#rules">Rules</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -145,7 +151,7 @@
 								congregation of like-minded hackers and techenthusiasts
 								where participants will brainstorm and
 								build on their idea.</h4> -->
-							<h5 class="lead">20th-23rd January, 2022</h5>
+							<h3 class="lead">20th-23rd January, 2022</h3>
 							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
 								target="_blank" class="main-btn">Registration</a>
 							<a href="https://discord.io/osdhack22" target="_blank" class="main-btn" id="discord">Join our Discord</a>
@@ -270,7 +276,7 @@
 	</div>
 	<!-- /Galery -->
 	<!-- Speakers -->
-	<div class="section">
+	<div id ="guest_speakers" class="section">
 		<!-- container -->
 		<div class="container">
 			<!-- row -->
