removed internet emoji

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							<h3 class="lead">20th-23rd January, 2022</h3>
 							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
 								target="_blank" class="main-btn">Registration</a>
-							<a href="https://discord.io/osdhack22" target="_blank" class="main-btn" id="discord">Join our Discord</a>
+							<a href="https://discord.io/osdhack22" target="_blank" class="main-btn" >Join our Discord</a>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -643,7 +643,7 @@
 										<div class="col-sm-4">
 											<div class="contact">
 												<h3>Venue</h3>
-												<p>This hackathon is being hosted online 🌐!</p>
+												<p>This hackathon is being hosted online!</p>
 											</div>
 										</div>
 										<!-- /contact -->
