--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
 							<h3>Ujjwal Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Compilers Hacker at Igalia</h4>
+						<h4 style="margin-top: -10px;">Compilers Hacker, Igalia</h4>
 					</div>
 				</div> <!-- contact -->
 				<div class="col-sm-4">
@@ -319,7 +319,7 @@
 						<a href="https://www.linkedin.com/in/atrisharma/?originalSubdomain=in" target="_blank">
 							<h3>Atri Sharma</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Distinguished Engineer at Securonix</h4>
+						<h4 style="margin-top: -10px;">Distinguished Engineer, Securonix</h4>
 					</div>
 
 				</div>
