chnaged some hrefs

--- a/index.html
+++ b/index.html
@@ -618,8 +618,7 @@
 														style="color: #dd0a37;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
-											<a style="margin-top: -30px;" href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download
-												Rules</a>
+											<a style="margin-top: -30px;" href="rules.html" target="_blank" class="main-btn">Rules and FAQs</a>
 										</div>
 										<hr class="style-two">
 									</div>
@@ -790,7 +789,7 @@
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							&copy;
 							<script>document.write(new Date().getFullYear());</script> All rights reserved by <a
-								href="osdc.netlify.com">OSDC</a>
+								href="https://osdc.netlify.app/" target="_blank">OSDC</a>
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							<!-- </span> -->
 						</div>
