added more speakers info

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div>
 	<a href="#top">
 		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
-			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
+			<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 90px;">
 		</div>
 	</a>
 	<!-- Header -->
@@ -337,30 +337,30 @@
 					<!--for begining-->
 				</div>
 				<!-- contact -->
-				<!-- <div class="col-sm-4">
+				<div class="col-sm-4">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+								style="border-radius: 50%;" src="img/speaker4.jpeg" alt="">
 						</div>
-						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
-							<h3>Ujjwal Sharma</h3>
+						<a href="https://www.linkedin.com/in/varodek" target="_blank">
+							<h3>Vaibhav Gupta</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
+						<h4 style="margin-top: -10px;">Software Engineer, CERN</h4>
 					</div>
-				</div> -->
+				</div>
 				<!-- contact -->
-				<!-- <div class="col-sm-4">
+				<div class="col-sm-4">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+								style="border-radius: 50%;" src="img/speaker5.jpeg" alt="">
 						</div>
-						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
-							<h3>Ujjwal Sharma</h3>
+						<a href="https://www.linkedin.com/in/rexagod" target="_blank">
+							<h3>Pranshu Srivastava</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
+						<h4 style="margin-top: -10px;">Software Engineer, Red Hat</h4>
 					</div>
 
-				</div> -->
+				</div>
 				<div class="col-sm-2">
 
 				</div>
