unlinked the rules for now

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div>
 	<a href="#top">
 		<div style="z-index: 999;position: fixed; left: 38.5px;top: 25px;">
-			<img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 90px;">
+			<img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 90px;">
 		</div>
 	</a>
 	<!-- Header -->
@@ -618,7 +618,7 @@
 														style="color: #dd0a37;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
-											<a style="margin-top: -30px;" href="rules.html" target="_blank" class="main-btn">Rules and FAQs</a>
+											<a style="margin-top: -30px;" href="#" target="_blank" class="main-btn">Rules and FAQs</a>
 										</div>
 										<hr class="style-two">
 									</div>
