--- a/index.html
+++ b/index.html
@@ -337,30 +337,30 @@
 					<!--for begining-->
 				</div>
 				<!-- contact -->
-				<!-- <div class="col-sm-4">
+				<div class="col-sm-4">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+								style="border-radius: 50%;" src="img/speaker4.jpeg" alt="">
 						</div>
-						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
-							<h3>Ujjwal Sharma</h3>
+						<a href="https://www.linkedin.com/in/varodek" target="_blank">
+							<h3>Vaibhav Gupta</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
+						<h4 style="margin-top: -10px;">Software Engineer, CERN</h4>
 					</div>
-				</div> -->
+				</div>
 				<!-- contact -->
-				<!-- <div class="col-sm-4">
+				<div class="col-sm-4">
 					<div class="contact">
 						<div class="speaker-img" style="margin-bottom: 15px;height: 150px; overflow: hidden;"><img
-								style="border-radius: 50%;" src="img/speaker1.jpeg" alt="">
+								style="border-radius: 50%;" src="img/speaker5.jpeg" alt="">
 						</div>
-						<a href="https://www.linkedin.com/in/ryzokuken/" target="_blank">
-							<h3>Ujjwal Sharma</h3>
+						<a href="https://www.linkedin.com/in/rexagod" target="_blank">
+							<h3>Pranshu Srivastava</h3>
 						</a>
-						<h4 style="margin-top: -10px;">Nodejs Collaborator,Pero</h4>
+						<h4 style="margin-top: -10px;">Software Engineer, Red Hat</h4>
 					</div>
 
-				</div> -->
+				</div>
 				<div class="col-sm-2">
 
 				</div>
@@ -618,8 +618,7 @@
 														style="color: #dd0a37;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
-											<a style="margin-top: -30px;" href="./OSDHack_Rules.pdf" target="_blank" class="main-btn">Download
-												Rules</a>
+											<a style="margin-top: -30px;" href="#" target="_blank" class="main-btn">Rules and FAQs</a>
 										</div>
 										<hr class="style-two">
 									</div>
@@ -790,7 +789,7 @@
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							&copy;
 							<script>document.write(new Date().getFullYear());</script> All rights reserved by <a
-								href="osdc.netlify.com">OSDC</a>
+								href="https://osdc.netlify.app/" target="_blank">OSDC</a>
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							<!-- </span> -->
 						</div>
