improved rules page

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 							<h3 class="lead">20th-23rd January, 2022</h3>
 							<div class="home-links">
 							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf4ZXf1gCXfv6vRrVPsRL2SIwTK0HFR_kl8zbM-svaqvTQlMA/viewform?usp=sf_link"
-								target="_blank" class="main-btn">Registration</a>
+								target="_blank" class="main-btn register-btn">Registration</a>
 							<a href="https://discord.io/osdhack22" target="_blank" class="main-btn discord-join-btn" >
 												<svg x="0px" y="0px" width="20" height="20" viewBox="0 0 50 50"
 													style=" fill:#fff;">
@@ -618,7 +618,7 @@
 														style="color: #dd0a37;">&nbsp;FAQs</span></h2>
 											</div>
 											<p class="lead"></p>
-											<a style="margin-top: -30px;" href="#" target="_blank" class="main-btn">Rules and FAQs</a>
+											<a style="margin-top: -30px;" href="rules.html" target="_blank" class="main-btn">Rules and FAQs</a>
 										</div>
 										<hr class="style-two">
 									</div>
