--- a/rules.html
+++ b/rules.html
@@ -22,7 +22,7 @@
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="css/style.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="rules.css">
+<link rel="stylesheet" href="css/rules.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,50 +30,6 @@
 			  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 			  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 			<![endif]-->
-	<style>
-		.card {
-			margin-top: 4rem;
-			text-align: center;
-			width: 33%;
-
-		}
-
-		.card:nth-child(1) {
-			float: left;
-		}
-
-		.card:nth-child(2) {
-			float: right;
-		}
-
-		.card-header {
-			margin-top: 1.5rem;
-			font-size: 1.5rem;
-			font-weight: 900;
-		}
-
-		.card-header h2 {
-			font-size: 1.5em;
-		}
-
-		.role p {
-			color: #6c715d;
-		}
-
-		.card-author {
-			width: 210px;
-			height: 210px;
-			overflow: hidden;
-			border-radius: 50%;
-			border: 5px solid #dd0a37;
-			margin: 0 auto;
-		}
-
-		img {
-			height: 100%;
-			width: auto;
-		}
-	</style>
 </head>
 <div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div>
 	<a href="#top">
@@ -107,12 +63,12 @@
 			<!-- Navigation -->
 			<nav id="nav">
 				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#guest_speakers">Speakers</a></li>
-					<li><a href="#schedule">Schedule</a></li>
-					<li><a href="#rules">Rules</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="index.html#home">Home</a></li>
+					<li><a href="index.html#about">About</a></li>
+					<li><a href="index.html#guest_speakers">Speakers</a></li>
+					<li><a href="index.html#schedule">Schedule</a></li>
+					<li><a href="index.html#rules">Rules</a></li>
+					<li><a href="index.html#contact">Contact</a></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
@@ -121,7 +77,7 @@
 	</header>
 	<!-- /Header -->
   <h1>Rules</h1>
-<ul style="font-size: 20px; list-style-type: disc;">
+<ul class="rules">
     <li>This Hackathon is open for everyone.</li>
     <li>There is no restriction on the type of project you come up with, or the languages you use. It can be
         anything from a web app to a system library.</li>
@@ -134,6 +90,7 @@
     <li>You can reuse code from other open source projects provided that you give them appropriate
         attribution and
         follow their LICENSE agreements.</li>
+    <li>Allowed team size: 2-4 members</li>
     <li>You must get contributions from every member of your team, if you have an issue with someone on your
         team
         please contact a member of the organising team. These contributions do not necessarily have to be
@@ -171,7 +128,7 @@ Frequently Asked Questions (FAQs)
     </div>
     <div class="faq-answer ">
       <div class="faq-answer-content">
-        A Hackathon is an intense event that brings together designers and developers along with industry experts to identify problems and create software solutions, usually within 24-48 hours. If you're a female or non-binary student developer, we'd love to have you at OSDHack! Whether that's high school, undergrad, or graduate, we believe you can get something out of the event.
+        A Hackathon is an intense event that brings together designers and developers along with industry experts to identify problems and create software solutions, usually within 24-48 hours. Whether that's high school, undergrad, or graduate, we believe you can get something out of the event.
 
       </div>
 
